--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,18 @@ body {
   box-sizing: border-box;
   margin: 0; padding: 0;
 }
+
+.toast {
+  width: 220px;
+  height: 80px;
+  position: fixed;
+  padding: 5px;
+  top: 10px;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 5px;
+}
